# waldo

./: Cargo.toml  LICENSE  README.md  config.toml.example  waldo.service
src/: config.rs  dbus.rs  main.rs  state.rs  webhook.rs
